New special role service for profiles app
